tests/paczka1/fuzzy1/87805804.err
Error in line 3: tQNnpx A708 94,7
Error in line 12: md989 S934 34,8
Error in line 14: S581 S581 31,1
Error in line 8: tQNnpx S581 16,4
Error in line 17: tQNnpx S934 93,0
